Fixed z-index when open/close menu nav button

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -84,6 +84,8 @@ body {
   font-size: var(--fontSize-1);
   color: var(--color-text);
   // background: pink;
+  position: relative;
+  z-index: 1;
 }
 
 footer {
